Fix squashing issue

--- a/css/actioncenter/notifications.css
+++ b/css/actioncenter/notifications.css
@@ -2,14 +2,13 @@
 @import url("./notifications/error.css");
 
 #ArcShell div.actioncenter div.notifications {
-  display: flex;
   flex-direction: column;
-  gap: 20px;
   height: calc(100% - 85px - 60px);
   overflow-y: scroll;
   overflow-x: hidden;
   margin-right: -8px; /* for the scrollbar */
-  padding: 20px 0;
+  padding: 0;
+  padding-top: 20px;
 }
 
 #ArcShell div.actioncenter div.notifications p.none {
